# flashrom

./: Makefile.am  amd_imc.c  atahpt.c  bootstrap.sh  configure.ac  dmi.c  flashchips.c  flashchips.h  flashrom.c  flashrom.spec  ich_descriptors.c  ich_descriptors.h  ichspi.c  internal.c  it85spi.c  it87spi.c  mcp6x_spi.c  nic3com.c  nicintel_spi.c  nicnatsemi.c  nicrealtek.c  processor_enable.c  rayer_spi.c  satamv.c  sb600spi.c  wbsio_spi.c
